k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ahava
  labels:
    app.kubernetes.io/part-of: ahava-ewallet
    environment: production
