k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ubuntu-pay
  labels:
    name: ubuntu-pay
    environment: production
    platform: ubuntu-pay
    tier: backend
